--- a/FeedList/app/src/main/res/layout/activity_main.xml
+++ b/FeedList/app/src/main/res/layout/activity_main.xml
@@ -9,8 +9,10 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.excercise.feedlist.ListDemoActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/demo_list"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Hello World!" />
+        android:scrollbars="vertical"
+        tools:listitem="@layout/view_list_item" />
 </RelativeLayout>
