--- a/FeedList/app/src/main/res/layout/activity_main.xml
+++ b/FeedList/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/rootview"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -9,10 +10,17 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.excercise.feedlist.ListDemoActivity">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/demo_list"
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/pull_to_refresh"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:scrollbars="vertical"
-        tools:listitem="@layout/view_list_item" />
+        android:layout_height="match_parent">
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/demo_list"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:scrollbars="vertical"
+            tools:listitem="@layout/view_list_item" />
+
+    </android.support.v4.widget.SwipeRefreshLayout>
 </RelativeLayout>
