--- a/FeedList/app/src/main/res/layout/view_list_item.xml
+++ b/FeedList/app/src/main/res/layout/view_list_item.xml
@@ -34,6 +34,6 @@
             android:id="@+id/image"
             android:layout_width="100dp"
             android:layout_height="100dp"
-            tools:src="@android:drawable/btn_star" />
+            android:contentDescription="@string/description" />
     </LinearLayout>
 </LinearLayout>
