--- a/FeedList/app/src/main/res/layout/activity_main.xml
+++ b/FeedList/app/src/main/res/layout/activity_main.xml
@@ -23,4 +23,11 @@
             tools:listitem="@layout/view_list_item" />
 
     </android.support.v4.widget.SwipeRefreshLayout>
+
+    <ProgressBar
+        android:id="@+id/progressbar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:visibility="gone" />
 </RelativeLayout>
